Updated the class names for the table rows

--- a/docs/plugins/supybot.css
+++ b/docs/plugins/supybot.css
@@ -29,10 +29,10 @@ pre {
   white-space:normal;
 }
 
-.lightyellow {
+.treven {
   background:aliceblue;
 }
 
-.lightgreen {
+.trodd {
   background:white;
 }
